@@ -1,18 +1,20 @@
 package com.wash.laundry_app.auth;
 
-import com.wash.laundry_app.config.LegacyEndpointInterceptor;
-import com.wash.laundry_app.config.RateLimitInterceptor;
-import lombok.AllArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.servlet.config.annotation.InterceptorRegistry;
 import org.springframework.web.servlet.config.annotation.ResourceHandlerRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
+import org.springframework.web.servlet.config.annotation.InterceptorRegistry;
+import com.wash.laundry_app.config.LegacyEndpointInterceptor;
+
+import com.wash.laundry_app.config.RateLimitInterceptor;
+
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -25,8 +27,7 @@ public class WebConfig implements WebMvcConfigurer {
     private final LegacyEndpointInterceptor legacyEndpointInterceptor;
     private final RateLimitInterceptor rateLimitInterceptor;
 
-    public WebConfig(LegacyEndpointInterceptor legacyEndpointInterceptor,
-                     RateLimitInterceptor rateLimitInterceptor) {
+    public WebConfig(LegacyEndpointInterceptor legacyEndpointInterceptor, RateLimitInterceptor rateLimitInterceptor) {
         this.legacyEndpointInterceptor = legacyEndpointInterceptor;
         this.rateLimitInterceptor = rateLimitInterceptor;
     }
@@ -34,18 +35,53 @@ public class WebConfig implements WebMvcConfigurer {
     @Override
     public void addInterceptors(InterceptorRegistry registry) {
         registry.addInterceptor(legacyEndpointInterceptor)
-                .addPathPatterns("/admin/**", "/employe/**", "/livreur/**",
-                        "/api/admin/**", "/api/employe/**", "/api/livreur/**");
-        registry.addInterceptor(rateLimitInterceptor);
+                .addPathPatterns("/admin/**", "/employe/**", "/livreur/**", "/api/admin/**", "/api/employe/**", "/api/livreur/**");
+        
+        registry.addInterceptor(rateLimitInterceptor)
+                .addPathPatterns("/**");
     }
 
+    // =====================
+    // CORS CONFIG
+    // =====================
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+
+        // ── Explicit Origins ──────────────────────────────────────────────────
+        // These are exact origins (no wildcards). Parsed from application.properties.
+        // Example: http://localhost:5173,https://pureclean-backend-production.up.railway.app
+        List<String> originPatterns = new ArrayList<>();
+
+        if (allowedOrigins != null && !allowedOrigins.isBlank()) {
+            originPatterns.addAll(Arrays.asList(allowedOrigins.split(",")));
+        }
+
+        // Use setAllowedOriginPatterns — supports wildcards + credentials together.
+        config.setAllowedOriginPatterns(originPatterns);
+
+        // ── Allowed Methods ───────────────────────────────────────────────────
+        config.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
+        ));
+
+        // ── Allowed Headers ───────────────────────────────────────────────────
+        // Wildcard "*" allows all request headers including Authorization,
+        // Content-Type, X-Requested-With, Accept, etc.
+        config.setAllowedHeaders(Arrays.asList("*"));
+
+        // ── Exposed Headers ───────────────────────────────────────────────────
+        // Headers the browser is allowed to read from the response.
+        // Authorization allows the frontend to read JWT from response headers if needed.
+        config.setExposedHeaders(Arrays.asList("Authorization", "Content-Disposition"));
+
+        // ── Credentials ───────────────────────────────────────────────────────
+        // Must be true for cookies (refresh token cookie) and
+        // Authorization header to be sent cross-origin.
         config.setAllowCredentials(true);
+
+        // ── Preflight Cache Duration ──────────────────────────────────────────
+        // Cache preflight OPTIONS response for 1 hour to reduce overhead.
         config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -53,9 +89,17 @@ public class WebConfig implements WebMvcConfigurer {
         return source;
     }
 
+    // =====================
+    // RESOURCE HANDLERS
+    // =====================
     @Override
     public void addResourceHandlers(ResourceHandlerRegistry registry) {
+        String uploadPath = new java.io.File("uploads").getAbsolutePath();
+        if (!uploadPath.endsWith(java.io.File.separator)) {
+            uploadPath += java.io.File.separator;
+        }
+        
         registry.addResourceHandler("/uploads/**")
-                .addResourceLocations("file:uploads/");
+                .addResourceLocations("file:" + uploadPath);
     }
 }
